--- a/_config.yml
+++ b/_config.yml
@@ -109,12 +109,12 @@ remote_theme: hydecorp/hydejack@v9.0.4
  
 # Sidebar image and theme color of the site.
 accent_image:          /assets/img/layout/sidebar-bg002.jpg
-accent_color:          rgb(79,177,186)
+accent_color:          rgb(228, 209, 237)
 
 # This is used for the `theme-color` meta tag,
 # which changes the background color of the browser UI in certain browsers.
 # Defaults to `accent_color`.
-theme_color:           rgb(8,46,57)
+theme_color:           rgb(69, 42, 89)
 
 # The string encoding which fonts to fetch from Google Fonts.
 # See: <https://hydejack.com/docs/configuration/>
